add constant mrg func
