# docs/swagger.yaml
@@ -17,12 +17,20 @@ definitions:
       deleted_user:
         description: ผุ้ลบ
         type: string
+      email:
+        description: อีเมล
+        type: string
       id_card:
         description: รหัสบัตรประจำตัว
         type: string
       is_active:
         description: สถานะใช้งาน
         type: integer
+      level:
+        description: ความสัมพันธ์กับ UserLevels
+        items:
+          $ref: '#/definitions/arczed_internal_entities_models.UsersLevels'
+        type: array
       name:
         description: ชื่อ
         type: string
@@ -43,6 +51,38 @@ definitions:
         type: string
       user_id:
         description: ไอดี ของผู้ใช้งาน
+        type: string
+    type: object
+  arczed_internal_entities_models.UsersLevels:
+    properties:
+      created_at:
+        description: วันที่สร้าง
+        type: string
+      created_user:
+        description: ผู้สร้าง
+        type: string
+      deleted_at:
+        allOf:
+        - $ref: '#/definitions/gorm.DeletedAt'
+        description: วันเวลาที่ลบ
+      deleted_user:
+        description: ผุ้ลบ
+        type: string
+      id:
+        type: integer
+      is_active:
+        description: สถานะใช้งาน
+        type: integer
+      level:
+        type: string
+      updated_at:
+        description: วันเวลาที่อัพเดทล่าสุด
+        type: string
+      updated_user:
+        description: ผู้อัพเดทล่าสุด
+        type: string
+      userID:
+        description: ต้องกำหนดประเภทและขนาดให้ตรงกับ Users.UserId
         type: string
     type: object
   arczed_internal_entities_schemas.AddUsers:
@@ -72,6 +112,33 @@ definitions:
         description: ผู้ใช้งาน
         type: string
     type: object
+  arczed_internal_entities_schemas.ConfigConstant:
+    properties:
+      const_id:
+        description: ไอดีค่าคงที่
+        type: string
+      group_id:
+        description: ไอดีกลุ่มค่าคงที่
+        type: string
+      name_en:
+        description: ชื่อค่าคงที่ EN
+        type: string
+      name_th:
+        description: ชื่อค่าคงที่ TH
+        type: string
+      ref_value1:
+        description: ค่าอ้างอิง 1
+        type: string
+      ref_value2:
+        description: ค่าอ้างอิง 2
+        type: string
+      ref_value3:
+        description: ค่าอ้างอิง 3
+        type: string
+      sort:
+        description: ลำดับ
+        type: integer
+    type: object
   arczed_internal_entities_schemas.HTTPError:
     properties:
       message:
@@ -100,20 +167,16 @@ definitions:
     type: object
   arczed_internal_entities_schemas.UserResp:
     properties:
-      birth_day:
-        description: วันเกิด
-        type: string
       email:
         description: อีเมล
         type: string
-      id_card:
-        description: เลขบัตรประจำตัว
-        type: string
+      level:
+        description: เลเวล
+        items:
+          type: string
+        type: array
       name:
         description: ชื่อ
-        type: string
-      phone_number:
-        description: เบอร์โทร
         type: string
       sur_name:
         description: นามสกุล
@@ -143,6 +206,139 @@ info:
   title: User API
   version: "1.0"
 paths:
+  /api/const/createConst:
+    post:
+      consumes:
+      - application/json
+      description: เพิ่มข้อมูลค่าคงที่
+      parameters:
+      - default: th
+        description: (en, th)
+        in: header
+        name: Accept-Language
+        type: string
+      - description: ' request body '
+        in: body
+        name: request
+        schema:
+          $ref: '#/definitions/arczed_internal_entities_schemas.ConfigConstant'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/arczed_internal_entities_schemas.HTTPError'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/arczed_internal_entities_schemas.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: เพิ่มข้อมูลค่าคงที่
+      tags:
+      - Const
+  /api/const/deleteConst/{group_id}/{const_id}:
+    delete:
+      consumes:
+      - application/json
+      description: ลบข้อมูล ค่าคงที่
+      parameters:
+      - default: th
+        description: (en, th)
+        in: header
+        name: Accept-Language
+        type: string
+      - description: group id
+        in: path
+        name: group_id
+        required: true
+        type: string
+      - description: const id
+        in: path
+        name: const_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/arczed_internal_entities_schemas.HTTPError'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/arczed_internal_entities_schemas.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: ลบข้อมูล ค่าคงที่
+      tags:
+      - Const
+  /api/const/updateConst:
+    post:
+      consumes:
+      - application/json
+      description: แก้ไขข้อมูลค่าคงที่
+      parameters:
+      - default: th
+        description: (en, th)
+        in: header
+        name: Accept-Language
+        type: string
+      - description: ' request body '
+        in: body
+        name: request
+        schema:
+          $ref: '#/definitions/arczed_internal_entities_schemas.ConfigConstant'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/arczed_internal_entities_schemas.HTTPError'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/arczed_internal_entities_schemas.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: แก้ไขข้อมูลค่าคงที่
+      tags:
+      - Const
+  /api/login:
+    post:
+      consumes:
+      - application/json
+      description: Login เข้าใช้งานสำหรับขอ token
+      parameters:
+      - default: th
+        description: (en, th)
+        in: header
+        name: Accept-Language
+        type: string
+      - description: ' request body '
+        in: body
+        name: request
+        schema:
+          $ref: '#/definitions/arczed_internal_entities_schemas.LoginReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/arczed_internal_entities_schemas.LoginResp'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/arczed_internal_entities_schemas.HTTPError'
+      security:
+      - ApiKeyAuth: []
+      summary: Login เข้าใช้งาน
+      tags:
+      - Auth
   /api/users:
     get:
       consumes:
@@ -282,38 +478,6 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: ลบข้อมูล User
-      tags:
-      - Users
-  /api/users/login:
-    post:
-      consumes:
-      - application/json
-      description: Login เข้าใช้งานสำหรับขอ token
-      parameters:
-      - default: th
-        description: (en, th)
-        in: header
-        name: Accept-Language
-        type: string
-      - description: ' request body '
-        in: body
-        name: request
-        schema:
-          $ref: '#/definitions/arczed_internal_entities_schemas.LoginReq'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/arczed_internal_entities_schemas.LoginResp'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/arczed_internal_entities_schemas.HTTPError'
-      security:
-      - ApiKeyAuth: []
-      summary: Login เข้าใช้งาน
       tags:
       - Users
   /api/users/updateUsers:
